--- a/index.html
+++ b/index.html
@@ -18,27 +18,17 @@
     <h2>X's Turn</h2>
 
     <!-- column markers -->
-    <section id="markers">
-        <div></div>
-        <div></div>
-        <div></div>
-    </section>
-
-    <!-- game board -->
-    <section id="board">
-        <!-- row 2 -->
-        <div id="c0r2"></div>
-        <div id="c1r2"></div>
-        <div id="c2r2"></div>
-        <!-- row 1 -->
-        <div id="c0r1"></div>
-        <div id="c1r1"></div>
-        <div id="c2r1"></div>
-        <!-- row 0 -->
-        <div id="c0r0"></div>
-        <div id="c1r0"></div>
-        <div id="c2r0"></div>
-    </section>
+    <main id="board">
+        <div id="sq-0"></div>
+        <div id="sq-1"></div>
+        <div id="sq-2"></div>
+        <div id="sq-3"></div>
+        <div id="sq-4"></div>
+        <div id="sq-5"></div>
+        <div id="sq-6"></div>
+        <div id="sq-7"></div>
+        <div id="sq-8"></div>
+    </main>
 
     <!-- play again button -->
     <div>
