adjust css properties

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>Let's Play Tic Tac Toe!</header>
     <h2>X's Turn</h2>
 
-    <!-- column markers -->
+    <!-- square markers -->
     <main id="board">
         <div id="sq-0"></div>
         <div id="sq-1"></div>
